--- a/EmployCheck.API/appsettings.json
+++ b/EmployCheck.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultConnection": {
+    "SqlLite": "Data Source=employment.db"
+  }
 }
